# llm_assessment

./: README_CRAWL_PROCESS.md  config.yaml  get_url.py  iclr_2024_first_50_papers.json  iclr_2024_papers_reviews_accepted_part_01.json  pyproject.toml
docs/: document.md
scripts/: crawl_and_process_iclr.py  crawl_first_50.py  process_papers.py  rebuild_index.py  retry_failed.py  stats.py
src/: __init__.py  markdown_converter.py  pdf_downloader.py  processor.py  schemas.py  storage_manager.py
src/crawler/: crawl.py
